<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutReviewCommitterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="scanCSRFragmentTag"
    tools:context=".ScanCSRFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Scan CSR"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"

        android:useDefaultMargins="true">

        <TextView
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="CSR" />

        <EditText
            android:id="@+id/txtCSRAsPEM"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@string/zxing_msg_default_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/txtCsrSubjectDescr"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="Subject" />

        <TextView
            android:id="@+id/txtCsrSubject"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="Subject placeholder" />


    </GridLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.375"
            android:text="@string/next" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.375"
            android:text="@string/cancel" />
    </LinearLayout>
</GridLayout>

