...
        <!-- quorum member 1 -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="Quorum member 1" />

        <EditText
            android:id="@+id/txtNewCA_QN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
...
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="Password" />

        <EditText
            android:id="@+id/txtNewCA_QPW1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:ems="10"
            android:gravity="start"
...
